# Paradigms

./: CMakeLists.txt
Paradigms Exams/2016/midterm_1/: midterm1_1.cc
Paradigms Exams/2017/: midterm 1 2017.docx  midterm 3 2017.docx
Paradigms Exams/2018/: 2018_midterm_3.c  2018_midterm_3_solution.c  პარადიგმები-გამოცდა1.2018.docx  პარადიგმები-გამოცდა2.2018.docx  პარადიგმები-შუალედური3.2018.docx
Paradigms Exams/2019/Fx/assembly/: employees.c
Paradigms Exams/2019/Fx/scheme/: readme.txt  rle.scm
Paradigms Exams/2019/final/კლასი/: sorted_multi_set.h  tests.c  პირობა.docx
Paradigms Exams/2019/final/სქემა/: readme.txt  solution.txt  tests.scm
Paradigms Exams/2019/midterm_1/: Instructions.docx  Problems.docx
Paradigms Exams/2019/midterm_1/problems/decompress/: run_tests
Paradigms Exams/2019/midterm_2/ამოცანა 1(კლასი)/: readme.txt
Paradigms Exams/2019/midterm_2/ამოცანა 2(ესემბლი)/: Assembly.c
Paradigms Exams/2019/midterm_3/ამოცანა 1(სქემა)/: max-decreasing-subsegment.scm  sol_max-decreasing-subsegment.scm  პირობა 1.docx
Paradigms Exams/2019/midterm_3/ამოცანა 2(სრედები)/: პირობა 2.docx
Paradigms Exams/2019/midterm_4/: readme.txt
Paradigms Exams/2019/midterm_5/: readme.txt
__MACOSX/counting_array/: ._tests.c
assn1/: JKDSJDS.cpp
exam2019/: a.out  sorted_multi_set.c  sorted_multi_set.h  tests.c
exam24/counting_array/: a.out  counting_array.c  counting_array.h  tests.c
exam24/process/: process.c  process.s
exam24/sum_3bit/: sum_3bit.c  sum_3bit.h  tests.c
practice/: fibo.asm  m  matrix.c  mid.asm  p2.asm  p2.c  ppp.c  something.asm  stack
(+37 files in other folders)
